--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,11 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compileOnly ("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2")
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.3'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.3'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.6.3'
+
+
 }
 
 
