--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
+  redis:
+    database: 0
+    host: 127.0.0.1
+    password: mypass
+    port: 6379
   data:
     mongodb:
       uri: mongodb+srv://aqib_mustafa:aqib_password@cluster0.epbqm.mongodb.net/Hospital?retryWrites=true&w=majority
-
 server:
   port: 8092
 
